--- a/fashion_blog_exercise/fashion_blog_css_starter/index.html
+++ b/fashion_blog_exercise/fashion_blog_css_starter/index.html
@@ -4,11 +4,13 @@
   <meta charset="utf-8">
   <title>Sartre’s List</title>
   <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lato:300,700,300italic,700italic' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <h1><a href="index.html">Sartre’s List</a></h1>
-    <h2>Better-Dressed People</h2>
+    <h2 id="tagline">Better-Dressed People</h2>
     <nav>
       <ul>
         <li><a href="#">Women’s</a></li>
@@ -20,18 +22,19 @@
       </ul>
     </nav>
   </header>
+  <div class="container">
   <main>
     <article>
       <time>11/12/13</time>
-      <h2><a href="#">On the Street in Brooklyn</a></h2>
-      <img src="http://lorempixel.com/900/300/fashion/7/" alt="fashion stuff">
+      <h2><a class="stories" href="#">On the Street in Brooklyn</a></h2>
+      <img src="fashion_photo.jpeg" alt="fashion stuff">
       <p>Cray culpa stumptown, flexitarian ex Odd Future do fugiat Wes Anderson proident 3 wolf moon officia bitters small batch. Et consequat do, nulla you probably haven’t heard of them High Life scenester. Vinyl fugiat High Life, kogi do VHS in aliqua lo-fi leggings gentrify Neutra tumblr. Odio vegan PBR, Marfa forage blue bottle try-hard readymade meggings retro delectus Echo Park. Ugh consectetur farm-to-table forage, laboris blue bottle McSweeney’s tattooed excepteur yr. Magna ut Schlitz flexitarian, vinyl craft beer proident yr forage 8-bit ethical sustainable placeat retro. Officia pickled beard, adipisicing gluten-free sint craft beer quis thundercats id 3 wolf moon fashion axe.</p>
-      <p><a href="#">Continues...</a></p>
+      <p><a class="" href="#">Continues...</a></p>
     </article>
     <article>
       <time>11/11/13</time>
-      <h2><a href="#">Vintage in Vogue</a></h2>
-      <img src="http://lorempixel.com/900/300/fashion/3/" alt="fashion stuff">
+      <h2><a class="stories" href="#">Vintage in Vogue</a></h2>
+      <img src="fashion_photo2.jpeg" alt="fashion stuff">
       <p>Selfies sunt Tumblr, delectus small batch DIY umami sint. Polaroid chambray selfies McSweeney's Cosby sweater, Pitchfork tattooed assumenda Wes Anderson Blue Bottle twee Carles ennui. Nisi locavore fugiat sapiente salvia aliqua. Shoreditch kogi exercitation fashion axe. Wolf semiotics Pinterest, laboris quis master cleanse tousled small batch street art bespoke fingerstache dreamcatcher ethical labore. Dreamcatcher iPhone typewriter, tote bag four loko fanny pack master cleanse organic PBR reprehenderit actually. Craft beer drinking vinegar wayfarers, pork belly narwhal pariatur polaroid cupidatat in 8-bit distillery anim literally.</p>
       <p><a href="#">Continues...</a></p>
     </article>
@@ -40,7 +43,7 @@
   <aside>
     <section>
       <h4>About Us</h4>
-      <p>Sartre’s List is u salvia, fixie mumblecore ex aesthetic qui minim blog cliche. Retro disrupt keytar PBR, delectus consectetur flexitarian fingerstache selfies nostrud Schlitz. Tempor Wes Anderson banh mi bicycle rights. Eu occaecat Williamsburg yr letterpress, biodiesel plaid tote bag cliche messenger bag lomo bespoke sapiente next level.</p>
+      <p class="about">Sartre’s List is u salvia, fixie mumblecore ex aesthetic qui minim blog cliche. Retro disrupt keytar PBR, delectus consectetur flexitarian fingerstache selfies nostrud Schlitz. Tempor Wes Anderson banh mi bicycle rights. Eu occaecat Williamsburg yr letterpress, biodiesel plaid tote bag cliche messenger bag lomo bespoke sapiente next level.</p>
       <p><a href="#">More&hellip;</a></p>
     </section>
     <section>
@@ -62,6 +65,7 @@
       </ul>
     </section>
   </aside>
+  </div>
   <footer>
     <a href="index.html">Home</a>
       |
